# ethiopia-news-website

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: database.py  main.py  models.py  schemas.py  seed_data.py
backend/routers/: articles.py  auth.py  categories.py  comments.py  regions.py  rss.py  submissions.py  websocket.py
backend/utils/: auth.py  ethiopian_calendar.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ArticleCard.tsx  BotLogsSection.tsx  Header.tsx  HomeCardsList.tsx  Layout.tsx  NewsSection.tsx  SettingsSection.tsx  WeatherSection.tsx
frontend/src/components/ui/: menu-toggle.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: ArticleDetailPage.tsx  CategoryPage.tsx  Dashboard.tsx  Home.tsx  HomePage.tsx  RegionPage.tsx  SubmitArticlePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  ethiopianCalendar.ts  requests.ts
