[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.119.1",
    "feedgen>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
